--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,32 +53,39 @@
 </div>
 
 <hr />
-
-<div class="container row">
-  <div class="col-md-4" *ngFor="let book of books; let i = index">
-    <div class="card card-block">
-      <img
-        class="custom-image-style"
-        img
-        src="{{ book.imageURL }}"
-        height="300"
-        width="200"
-        style="margin-left: 60px; margin-top: 10px"
-      />
-      <div class="book-desc-container row">
-        <div>
-          <p style="margin-left: 60px">
-            <strong>{{ book.title }}: ${{ book.price }}</strong>
-          </p>
-          <p style="margin-left: 60px">{{ book.author }}</p>
+<div class="container d-flex justify-content-center mt-50 mb-50">
+  <div class="container row">
+    <div class="col-md-4" *ngFor="let book of books; let i = index">
+      <div class="card">
+        <div class="card-body">
+          <div class="card-img-actions">
+            <img
+              src="{{ book.imageURL }}"
+              class="card-img img-fluid"
+              width="96"
+              height="350"
+              alt=""
+            />
+          </div>
         </div>
-        <div class="offset-md-4 col-md-4">
+        <div class="card-body bg-light text-center">
+          <div class="mb-2">
+            <h6 class="font-weight-semibold mb-2">
+              <a href="#" class="text-default mb-2" data-abc="true">{{
+                book.title
+              }}</a>
+            </h6>
+            <a href="#" class="text-muted" data-abc="true">{{ book.author }}</a>
+          </div>
+          <h3 class="mb-0 font-weight-semibold">${{ book.price }}</h3>
+
           <button
-            class="btn btn-primary btn-sm"
+            type="button"
+            class="btn bg-cart"
             (click)="addToCart(book)"
             [disabled]="book.isAdded === true"
           >
-            Add To Cart
+            Add to cart
           </button>
         </div>
       </div>
