--- a/src/app/checkout/checkout/checkout.component.html
+++ b/src/app/checkout/checkout/checkout.component.html
@@ -17,7 +17,7 @@
           <div class="row">
             <div class="col-md-12 col-lg-8">
               <div class="items">
-                <div class="product" *ngFor="let cart of cartObj">
+                <div class="product" *ngFor="let cart of data">
                   <div class="row">
                     <div class="col-md-3">
                       <img
