change fetch data
change logic of get data

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,7 +55,7 @@
 <hr />
 <div class="container d-flex justify-content-center mt-50 mb-50">
   <div class="container row">
-    <div class="col-md-4" *ngFor="let book of books; let i = index">
+    <div class="col-md-4" *ngFor="let book of booksData; let i = index">
       <div class="card">
         <div class="card-body">
           <div class="card-img-actions">
