--- a/src/app/admin/books/books.component.html
+++ b/src/app/admin/books/books.component.html
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let book of books">
+        <tr *ngFor="let book of booksData">
           <td>{{ book.isbn }}</td>
           <td>{{ book.title }}</td>
           <td>
